# INovelRec

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  evaluation.md
eval/: eval_queries.jsonl  manual_judgement_template.csv
scripts/: 01_inventory.py  02_build_profiles.py  03_build_index.py  04_search_demo.py  05_recommend_demo.py  06_explain_demo.py  07_evaluate.py  08_eval_metrics.py
src/: __init__.py  app_pipeline.py  clean.py  config.py  embed.py  evaluation.py  explain.py  ingest.py  llm_explain.py  llm_matcher.py  preferences.py  profile.py  query_expansion.py  rank.py  report.py  schema.py  search.py  split_chapters.py  streamlit_app.py  text_utils.py  vector_index.py
tests/: test_app_pipeline.py  test_clean.py  test_embed.py  test_evaluation.py  test_explain.py  test_ingest.py  test_multi_query_retrieval.py  test_preferences.py  test_profile.py  test_query_expansion.py  test_rank.py  test_report.py  test_vector_index.py
