[project]
name = "inovelrec"
version = "0.1.0"
description = "AI-powered Chinese web novel recommendation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chardet>=5.2.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "pydantic>=2.7.0",
  "regex>=2024.5.15",
  "rich>=13.7.0",
  "sentence-transformers>=3.0.0",
  "streamlit>=1.35.0",
  "transformers>=4.51.0",
  "accelerate>=1.0.0",
  "faiss-cpu>=1.8.0",
  "torch>=2.12.0",
  "tqdm>=4.66.0",
  "typer>=0.12.3",
  "pytest>=8.2.0",
  "huggingface-hub>=1.15.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "platform_system == 'Windows'" },
]
